# zad4-RafalSzyinski1

./: .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile.in
include/: GNUPlot.h  MatrixAction.h  Rectangular.h  VectorAction.h
lib/: CMakeLists.txt
source/: GNUPlot.cpp  Rectangular.cpp  main.cpp
test/: CMakeLists.txt  MatrixAction-test.cpp  Rectangular-test.cpp  VectorAction-test.cpp
